processamento das 'dropdows' do Create fotografia

--- a/AppFotos/Views/Fotografias/Create.cshtml
+++ b/AppFotos/Views/Fotografias/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Criar</h1>
 
-<h4>Fotografias</h4>
+<h4>Fotografia</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -37,13 +37,21 @@
                 <input asp-for="Preco" class="form-control" />
                 <span asp-validation-for="Preco" class="text-danger"></span>
             </div>
+            @* estes SELECT são as 'dropdows' da escolha da Categoria e Utilizador*@
             <div class="form-group">
+                @*esta vai buscar o display.*@
                 <label asp-for="CategoriaFK" class="control-label"></label>
-                <select asp-for="CategoriaFK" class ="form-control" asp-items="ViewBag.CategoriaFK"></select>
+                @*esta vai buscar o conteúdo.*@
+                <select asp-for="CategoriaFK" class ="form-control" asp-items="ViewBag.CategoriaFK">
+                    @*0 -> serve para aparecer no parâmetro 'Escolha uma categoria, por favor' inicialmente*@
+                    <option value ="0">Escolha uma categoria, por favor</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="DonoFK" class="control-label"></label>
-                <select asp-for="DonoFK" class ="form-control" asp-items="ViewBag.DonoFK"></select>
+                <select asp-for="DonoFK" class ="form-control" asp-items="ViewBag.DonoFK">
+                    <option value ="0">Escolha um utilizador, por favor</option>
+                </select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
