tratamento de atributos Preco por PrecoAux

--- a/AppFotos/Views/Fotografias/Index.cshtml
+++ b/AppFotos/Views/Fotografias/Index.cshtml
@@ -58,7 +58,7 @@
                 @Html.DisplayFor(modelItem => item.Categoria.Nome)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Dono.NIF)
+                @Html.DisplayFor(modelItem => item.Dono.Nome)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
