--- a/AppFotos/Views/Fotografias/Details.cshtml
+++ b/AppFotos/Views/Fotografias/Details.cshtml
@@ -50,7 +50,7 @@
             @Html.DisplayNameFor(model => model.Dono)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Dono.NIF)
+            @Html.DisplayFor(model => model.Dono.Nome)
         </dd>
     </dl>
 </div>
