--- a/AppFotos/Views/Fotografias/Edit.cshtml
+++ b/AppFotos/Views/Fotografias/Edit.cshtml
@@ -34,9 +34,9 @@
                 <span asp-validation-for="Data" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Preco" class="control-label"></label>
-                <input asp-for="Preco" class="form-control" />
-                <span asp-validation-for="Preco" class="text-danger"></span>
+                <label asp-for="PrecoAux" class="control-label"></label>
+                <input asp-for="PrecoAux" class="form-control" />
+                <span asp-validation-for="PrecoAux" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CategoriaFK" class="control-label"></label>
