--- a/AppFotos/Views/Fotografias/Create.cshtml
+++ b/AppFotos/Views/Fotografias/Create.cshtml
@@ -21,7 +21,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Descricao" class="control-label"></label>
-                <input asp-for="Descricao" class="form-control" />
+                @*<input asp-for="Descricao" class="form-control" />*@
+                <textarea asp-for="Descricao" class="form-control"></textarea>
                 <span asp-validation-for="Descricao" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -65,6 +66,12 @@
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
+    </div>
+    
+    <div class="col-md-4">
+        <p>colocar aqui outro container <br />
+            a imagem que se fez <i>upload</i>, por exemplo
+        </p>
     </div>
 </div>
 
