edição da fotografia

--- a/AppFotos/Views/Fotografias/Edit.cshtml
+++ b/AppFotos/Views/Fotografias/Edit.cshtml
@@ -59,6 +59,11 @@
             </div>
         </form>
     </div>
+    <div class="col-md-4">
+        @*https://getbootstrap.com/*@
+        <img src="~/imagens/@Model.Ficheiro"
+            alt="Imagem da Fotografia @Model.Titulo" title="@Model.Titulo" width="500px" />
+    </div>
 </div>
 
 <div>
