Possível Criação de Dados -->  Não Funciona

--- a/AppFotos/Views/Categorias/Index.cshtml
+++ b/AppFotos/Views/Categorias/Index.cshtml
@@ -34,7 +34,10 @@
                         <div>
                             <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                             < a asp - action = "Details" asp - route - id = "@item.Id" > Details </ a > |
-                            < a asp - action = "Delete" asp - route - id = "@item.Id" > Delete </ a >
+                            @if(item.ListaFotografias.Count == 0)
+                            {
+                                < a asp - action = "Delete" asp - route - id = "@item.Id" > Delete </ a >
+                            }
                         </div>
                     }
             </td>
