--- a/AppFotos/Views/Categorias/Delete.cshtml
+++ b/AppFotos/Views/Categorias/Delete.cshtml
@@ -20,8 +20,13 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        @if(Model.ListaFotografias.Count == 0)
+        {
+            <div>
+                <input type="hidden" asp-for="Id" />
+                <input type="submit" value="Delete" class="btn btn-danger" /> |
+            </div>
+        }
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
